# semipulse-sentinel

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: nightly-report.yml
config/: watchlist.csv
docs/: methodology.md  operations.md
docs/superpowers/plans/: 2026-07-18-semipulse-sentinel.md  2026-07-18-semipulse-trading-day-email-alerts.md  2026-07-18-semipulse-wenxuecity-source.md  2026-07-19-semipulse-daily-decision-report.md
docs/superpowers/specs/: 2026-07-18-semipulse-sentinel-design.md  2026-07-18-semipulse-trading-day-email-alerts-design.md  (+2 more)
scripts/: install-agent.ps1  uninstall-agent.ps1  verify_workflow.py
skill/semipulse-sentinel/: SKILL.md
src/semipulse_sentinel/: __init__.py  __main__.py  charts.py  cli.py  config.py  contracts.py  interpret.py  market_session.py  metrics.py  models.py  notifications.py  pipeline.py  publication.py  quality.py  report.py  source_publication.py  source_report.py  style.py  watchlist.py  wenxuecity_source.py
tests/: __init__.py  fixtures.py
tests/golden/: report-structure.json
tests/integration/: test_cli.py  test_packaging.py  test_pipeline.py  test_source_report.py
tests/unit/: test_charts.py  test_cli.py  test_contracts.py  test_interpret.py  test_market_session.py  test_metrics.py  test_models.py  test_notifications.py  test_provider.py  test_publication.py  test_quality.py  test_report.py  test_skill.py  test_source_publication.py  test_source_report.py  test_watchlist.py  test_wenxuecity_source.py  test_workflow.py
tests/windows/: test_install_agent.ps1
(+9 files in other folders)
